--- a/Example/iOSNFramework/Base.lproj/Main.storyboard
+++ b/Example/iOSNFramework/Base.lproj/Main.storyboard
@@ -65,5 +65,23 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
+        <!--Next Controller-->
+        <scene sceneID="6WX-No-pCc">
+            <objects>
+                <viewController storyboardIdentifier="next" id="UWV-hf-EAG" customClass="NextController" customModule="iOSNFramework_Example" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ZCs-fm-ddn"/>
+                        <viewControllerLayoutGuide type="bottom" id="fyP-lG-aTw"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="5Ad-VV-qRL">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lvn-ia-u79" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1367" y="27"/>
+        </scene>
     </scenes>
 </document>
